--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@patternfly/react-core": "4.206.2",
     "@patternfly/react-icons": "^4.57.2",
     "@patternfly/react-table": "^4.90.3",
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "@types/byte-size": "^8.1.0",
     "axios": "^0.27.2",
     "byte-size": "^8.1.0",
